Commit 3 - changed all js to jquery

--- a/style.css
+++ b/style.css
@@ -2,3 +2,13 @@ h1 {
   display: flex;
   justify-content: center;
 }
+
+.post {
+  display: flex;
+  justify-content: center;
+}
+
+ul {
+  list-style: none;
+  text-align: center;
+}
